--- a/app/views/deductionmaster/editdeductionmaster.html
+++ b/app/views/deductionmaster/editdeductionmaster.html
@@ -45,7 +45,7 @@
           <div class="control-group">
 			<label class="control-label" for="deductionCode">{{'label.master.deductioncode' | translate }}&nbsp;<span class="required">*</span></label>
 			 <div class="controls">
-               <input type="text" ng-model="formData.deductionCode">
+               <input type="text" ng-model="formData.deductionCode" id="deductionCode">
                  </div>
 			</div> 
 			</td></tr>
@@ -53,7 +53,7 @@
                	<div class="control-group">
 	            	<label class="control-label" for="deductionName">{{'label.master.deductionname' | translate }}&nbsp;<span class="required">*</span></label>
 	           		 <div class="controls">
-                    <input type="text" ng-model="formData.deductionName">
+                    <input type="text" ng-model="formData.deductionName" id="deductionName">
                   </div>
 	      		 </div>
           </td></tr>
