--- a/app/views/settlement/viewpartneraccount.html
+++ b/app/views/settlement/viewpartneraccount.html
@@ -115,7 +115,7 @@
             </thead>
             <tbody>
               <tr ng-repeat="clientdocument in clientdocuments">
-                <td>{{clientdocument.name}}</td>
+                <td>{{clientdocument.agmtName}}</td>
                 <td>{{clientdocument.description}}</td>
                 <td>{{clientdocument.fileName}}</td>
                 <td>
