--- a/app/views/settlement/viewpartneragreement.html
+++ b/app/views/settlement/viewpartneragreement.html
@@ -42,7 +42,7 @@
                               <td>Agreement Category:</td>
                               <td>{{agreementCategory}}</td>
                             </tr><tr></tr>
-                             <tr>
+                             <tr ng-show="agreementCategory=='Minimum Guarantee'">
                               <td>MG Amount:</td>
                               <td>{{mgAmount}}</td>
                             </tr><tr></tr>
