--- a/app/views/deductionmaster/createdeductionmaster.html
+++ b/app/views/deductionmaster/createdeductionmaster.html
@@ -20,7 +20,7 @@
           <div class="control-group">
 			<label class="control-label" for="deductionCode">{{'label.master.deductioncode' | translate }}&nbsp;<span class="required">*</span></label>
 			 <div class="controls">
-               <input type="text" ng-model="formData.deductionCode">
+               <input type="text" id="deductionCode" ng-model="formData.deductionCode">
                  </div>
 			</div> 
 			</td></tr>
@@ -28,7 +28,7 @@
                	<div class="control-group">
 	            	<label class="control-label" for="deductionName">{{'label.master.deductionname' | translate }}&nbsp;<span class="required">*</span></label>
 	           		 <div class="controls">
-                    <input type="text" ng-model="formData.deductionName">
+                    <input type="text" ng-model="formData.deductionName" id="deductionName">
                   </div>
 	      		 </div>
           </td></tr>
@@ -36,7 +36,7 @@
 	 	   <div class="control-group">
 	            <label class="control-label" for="deductionType">{{'label.master.deductiontype' | translate }}&nbsp;<span class="required">*</span></label>
 	            <div class="controls">
-	              <select ng-model="formData.deductionType"  ng-options="deductionTypeData.id as deductionTypeData.mCodeValue for deductionTypeData in deductionTypeDatas" value="{{deductionTypeData.id}}">
+	              <select ng-model="formData.deductionType" id="deductionType" ng-options="deductionTypeData.id as deductionTypeData.mCodeValue for deductionTypeData in deductionTypeDatas" value="{{deductionTypeData.id}}">
 	              </select>
 	            </div>
 	       </div>
@@ -53,7 +53,7 @@
              <div class="control-group">
                   <label class="control-label" for="levelApplicable">{{ 'label.master.levelapplicable' | translate }}&nbsp;<span class="required">*</span></label>
                  <div class="controls">
-                			<select ng-model="formData.levelApplicable" ng-options="levelApplicables.id as levelApplicables.mCodeValue for levelApplicables in categoryDatas" value="{{levelApplicables.id}}"></select>
+                			<select id="levelApplicable" ng-model="formData.levelApplicable" ng-options="levelApplicables.id as levelApplicables.mCodeValue for levelApplicables in categoryDatas" value="{{levelApplicables.id}}"></select>
               				</div>
              </div>
                 </td></tr>
@@ -97,7 +97,7 @@
                 <div class="control-group">
                   <label class="control-label" for="business">Business&nbsp;<span class="required">*</span></label>
                   <div class="controls">
-                    <select  ng-model="formData.business" ng-options="businessCategory.id as businessCategory.mCodeValue for businessCategory in businessDatas" value="{{businessCategory.id}}">
+                    <select  ng-model="formData.business" id="business" ng-options="businessCategory.id as businessCategory.mCodeValue for businessCategory in businessDatas" value="{{businessCategory.id}}">
                     </select>
                   </div>
                 </div>
