--- a/app/views/trackinvoice/trackinvoice.html
+++ b/app/views/trackinvoice/trackinvoice.html
@@ -76,6 +76,10 @@
 		</table>
 		<br>
 	</div>
+	<div class="offset3">
+            <a href="#/viewpartneraccount/{{resourceId}}" ><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
+          </div>
 		</fieldset>
 	
 </div>
