--- a/app/views/provisionalpo/createprovisionalpo.html
+++ b/app/views/provisionalpo/createprovisionalpo.html
@@ -80,7 +80,7 @@
 				</table>
 			</div>
 		</fieldset>
-		<div class="control-group">
+		<!-- <div class="control-group">
 			<label class="control-label">{{
 				'label.ppurchaseorder.deliverto' | translate }}<span
 				class="required">*</span>
@@ -127,7 +127,7 @@
 				</address>
 			</div>
 		</div>
-		<table class="table" width="100%" border="1">
+		 --><table class="table" width="100%" border="1">
 			<tr class="graybg">
 				<th>{{ 'label.serial' | translate }}</th>
 				<th>{{ 'label.perticulars' | translate }}</th>
@@ -191,7 +191,7 @@
 			</tbody>
 		</table>
 		<div class="offset3">
-
+			<a href='#/provisionalpo/{{partnerId}}' class="btn">Cancel</a>
 			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</form>
