--- a/app/views/provisionalpo/editprovisionalpo.html
+++ b/app/views/provisionalpo/editprovisionalpo.html
@@ -27,7 +27,7 @@
 	            </div>
 	       </div>
 	       <div class="offset3">
-            <a href="#/viewpartneraccount/{{formData.partnerAccountId}}" ><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
+            <a href="#/provisionalpo/{{partnerId}}" ><button type="reset" class="btn">{{'button.cancel'| translate}}</button></a>
             <button type="submit" class="btn btn-primary">{{'button.save'| translate}}</button>
           </div>
     	</fieldset>
