--- a/app/views/clients/clients.html
+++ b/app/views/clients/clients.html
@@ -41,7 +41,7 @@
 </tab>
       <tab heading="{{'tab.master.master' | translate}}" select="getMasterScreen()" active="master">
         <div class="pull-right btn-group">
-          <a href="#/createdeductionmaster" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{ 'button.add' | translate }}</a>
+          <a href="#/createdeductionmaster" class="btn btn-primary"><i class="icon-plus icon-white"></i>Create</a>
         </div>
         <br>          
           <table class="table">
