--- a/app/views/deductionmaster/editdeductionmaster.html
+++ b/app/views/deductionmaster/editdeductionmaster.html
@@ -1,6 +1,6 @@
          <div ng-controller="EditDeductionMasterController">
              <ul class="breadcrumb">
-              <li><a href="#/clients">Deduction Code</a> <span class="divider">/</span></li>
+              <li><a href="#/clients" ng-click="cancel()">Deduction Code</a> <span class="divider">/</span></li>
               <li class="active">Edit DeductionCode</li>
           </ul>      
           
