--- a/app/views/settlement/mapgamedetails.html
+++ b/app/views/settlement/mapgamedetails.html
@@ -24,7 +24,7 @@
 							<table>
 								<!-- <tr>
 									<td>
-									<div class="control-group">
+									<div class="control-group">PartnerName
 										<label class="control-label" for="partnerType">{{'label.partner.type' | translate }}&nbsp;<span class="required">*</span></label>
 										<div class="controls">
 											<select ng-model="formData.partnerType" id="partnerType"
@@ -49,11 +49,11 @@
 									</td>
 								</tr> -->
 								<tr>
-									<td>
+									<td>PartnerName
 							          	<div class="control-group">
 											<label class="control-label" for="partnerName">{{'label.partner.name' | translate }}&nbsp;<span class="required">*</span></label>
 											<div class="controls">
-												<input type="text" ng-model="formData.partnerName" id="partnerName"/>
+												<input type="text" id="PartnerName" ng-model="formData.partnerName" id="partnerName"/>
 											</div>
 									    </div>
 									</td>
@@ -73,7 +73,7 @@
 								</tr>
 								<tr>
 									<td>
-							          	<div class="control-group">
+							          	<div class="control-group">PartnerName
 											<label class="control-label" for="partnerAddress">{{'label.partner.address' | translate }}&nbsp;<span class="required">*</span></label>
 											<div class="controls">
 												<textarea  id="partnerAddress" ng-model="formData.partnerAddress" ng-minlength="{200}" ng-maxlength="{20}"></textarea>
