--- a/app/views/settlement/viewpartneraccount.html
+++ b/app/views/settlement/viewpartneraccount.html
@@ -86,9 +86,9 @@
                 <td>{{document.description}}</td>
                 <td>{{document.documentType.name}}</td>
                 <td>
-                  <span ng-repeat="file in document.documents">
-                    <a ng-click="downloadPartnerIdentifierDocument(document.id, file.id)">{{file.fileName}}</a>&nbsp;&nbsp;
-                  </span>
+                    <span ng-repeat="file in document.documents">{{file.fileName}}&nbsp;&nbsp;
+                    <a ng-click="downloadPartnerIdentifierDocument(document.id, file.id)" ><i class="icon-cloud-download"></i></a>
+                  </span>    
                 </td>
                 <td>
                   <a href="#/addpartneridentifierdocument/{{partner.id}}/{{document.id}}"><i class="icon-cloud-upload"></i></a>&nbsp;
@@ -114,13 +114,13 @@
               </tr>
             </thead>
             <tbody>
-              <tr ng-repeat="clientdocument in clientdocuments">
-                <td>{{clientdocument.agmtName}}</td>
-                <td>{{clientdocument.description}}</td>
-                <td>{{clientdocument.fileName}}</td>
+              <tr ng-repeat="partnerdocument in partnerdocuments">
+                <td>{{partnerdocument.agmtName}}</td>
+                <td>{{partnerdocument.description}}</td>
+                <td>{{partnerdocument.fileName}}</td>
                 <td>
-                  <a ng-click="downloadDocument(clientdocument.id)"><i class="icon-cloud-download"></i></a>&nbsp;
-                  <a ng-click="deleteDocument(clientdocument.id,$index)"><i class="icon-remove"></i></a>
+                  <a ng-click="downloadDocument(partnerdocument.id)"><i class="icon-cloud-download"></i></a>&nbsp;
+                  <a ng-click="deleteDocument(partnerdocument.id,$index)"><i class="icon-remove"></i></a>
                 </td>
               </tr>
             </tbody>
