--- a/app/views/settlement/currencyrate.html
+++ b/app/views/settlement/currencyrate.html
@@ -17,10 +17,10 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="rate in currencyData | filter:filterText">
-                <td><a href="#/editcurrencyrate/{{rate.id}}">{{rate.sourceCurrencyStr}}</a></td>            
-                <td>{{rate.targetCurrencyStr}}</td>
-                <td>{{rate.exchangeRate}}</td>         
+            <tr class="pointer-main" ng-repeat="rate in currencyData | filter:filterText">
+                <td class="pointer" data-ng-click="routeTo(rate.id)">{{rate.sourceCurrencyStr}}</td>            
+                <td class="pointer" data-ng-click="routeTo(rate.id)">{{rate.targetCurrencyStr}}</td>
+                <td class="pointer" data-ng-click="routeTo(rate.id)">{{rate.exchangeRate}}</td>         
             </tr>
         </tbody>
     </table>
