--- a/app/views/settlement/viewpartneraccount.html
+++ b/app/views/settlement/viewpartneraccount.html
@@ -4,9 +4,9 @@
           <h3>
             &nbsp;
             {{partner.partnerName}}
-            <!-- &nbsp;
-            <i class="icon-circle {{client.status.code | StatusLookup}}"></i>
-            &nbsp; -->
+             &nbsp;
+             <i class="icon-circle  {{status | StatusLookup }}"></i> 
+            &nbsp;
           </h3>
           </li>
             <li><span class="divider">|</span>
