--- a/app/views/administration/game.html
+++ b/app/views/administration/game.html
@@ -1,5 +1,3 @@
-
- 	
     <div ng-controller="CreateGameMediaController">
       <tabset  style="margin-bottom: 0px;">
      
@@ -48,7 +46,7 @@
             </thead>
             <tbody>
               <tr class="pointer-main" ng-repeat="pd in partnerAccountData.currentPageItems  | filter:filterText" >
-                <td class="pointer" data-ng-click="partnerTo(pd.id)">{{pd.partnerName}}</td>
+                <td class="pointer" data-ng-click="partnerTo(pd.id)"><i class="icon-stop {{ pd.statusName | StatusLookup }}"></i>&nbsp;{{pd.partnerName}}</td>
                 <td class="pointer" data-ng-click="partnerTo(pd.id)">{{pd.partnerTypeName}}</td>
                 <td class="pointer"data-ng-click="partnerTo(pd.id)">{{pd.partnerAddress}}</td>
                 <td class="pointer" data-ng-click="partnerTo(pd.id)">{{pd.contactNum}}</td>
@@ -68,7 +66,7 @@
           <a href="#/createpartneragreement" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{ 'button.add' | translate }}</a>
         </div> 
          <form ng-submit="searchPartnerAgreementHistory(filterText)">
-		<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by partnerName/category/status">
+		<input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by partnDateFormaterName/category/status">
 	   </form>    
           <table class="table">
         <thead>
@@ -425,7 +423,7 @@
 
       </tab>
       -->
-       <tab heading="{{'tab.ppurchase.order' | translate}}" select="getProPurchaseOrderTemplate()" active="purchaseorder">
+    <!--    <tab heading="{{'tab.ppurchase.order' | translate}}" select="getProPurchaseOrderTemplate()" active="purchaseorder">
       	<form class="form-horizontal well" ng-submit="submitProPurchaseOrder()">
         
         <div class="error" ng-show="errorStatus || errorDetails">
@@ -530,7 +528,7 @@
 							<td><input type="text" class="input-medium" datepicker-pop="MMM yyyy" ng-model="month.date" is-open="opened" min="minDate" max="maxDate" date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;" id="activityMonth" readonly/>&nbsp;&nbsp;&nbsp;<input type="button" value="Get details" ng-click="getRoyaltyAmount()" class="btn btn-primary"/></td>
 							<td><input type="text" class="input-small" ng-model="formData.royaltyAmount" id="currencyamount" readonly/></td>
 							<td><input type="text" ng-model="formData.currencyCode" class="input-mini" id="currencyCode" readonly></td>
-							<!--  <td><select  class="input-small" ng-model="formData.currency" id="currency" ng-options="currencyCodes.code as currencyCodes.code for currencyCodes in currencyCodesData"  value="{{currencyCodes.code}}"></select></td> -->
+							 <td><select  class="input-small" ng-model="formData.currency" id="currency" ng-options="currencyCodes.code as currencyCodes.code for currencyCodes in currencyCodesData"  value="{{currencyCodes.code}}"></select></td>
 					        
 						</tr>
 					</table>
@@ -574,7 +572,7 @@
       	   	
       	   			
       	   				    
-      </tab>
+      </tab> -->
  
     </tabset>
     
