--- a/app/views/settlement/agreement.html
+++ b/app/views/settlement/agreement.html
@@ -7,9 +7,9 @@
 	<li> <h3>
             &nbsp;
             {{partnerName}}
-            <!-- &nbsp;
-            <i class="icon-circle {{client.status.code | StatusLookup}}"></i>
-            &nbsp; -->
+             &nbsp;
+            <i class="icon-circle {{status | StatusLookup}}"></i>
+            &nbsp; 
           </h3>
           </li>
             <li><span class="divider">|</span>
