--- a/app/views/settlement/editpartneragreement.html
+++ b/app/views/settlement/editpartneragreement.html
@@ -139,7 +139,7 @@
       		<div class="control-group">
             <label class="control-label" for="endDate">{{'label.contrenddate' | translate}}&nbsp;<span class="required">*</span></label>
             <div class="controls">
-              <input type="text" id="endDate" datepicker-pop="dd MMMM yyyy" ng-model="formData.endDate" is-open="opened" min="minDate"
+              <input type="text" id="endDate" datepicker-pop="dd MMMM yyyy" ng-model="formData.endDate" is-open="opened" 
               date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/>
             </div>	
           </div>
