--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -76,7 +76,10 @@
              <div class="control-group">
               <label class="control-label" for="email">{{'label.email' | translate}}</label>
               <div class="controls">
-                <input type="text" id="email" ng-model="formData.email"/>
+                <input type="email" id="email" name="email" ng-model="formData.email" />
+                <span ng-show="createclientform.email.$dirty && createclientform.email.$invalid">
+                 <small class="error" ng-show="createclientform.email.$error.email">Invalid Email</small>
+                 </span>
               </div>
             </div>
             
