--- a/app/views/settlement/createpartneragreement.html
+++ b/app/views/settlement/createpartneragreement.html
@@ -182,7 +182,7 @@
                       <td><select ng-model="gd.mediaCategory"  class="input-medium" ng-options="mediaCategoryData.id as mediaCategoryData.mCodeValue for mediaCategoryData in mediaCategoryDatas" value="{{mediaCategoryData.id}}" required >
 					  </select></td>
 					  <td><select ng-model="gd.playSource"  class="input-medium" ng-options="playSourceData.id as playSourceData.mCodeValue for playSourceData in playSourceDatas" value="{{playSourceData.id}}" required >
-					  <td><input type="text" name="royaltyShare" class="input-medium"  ng-model="gd.royaltyShare" required ></td>
+					  <td><input type="text" id="royaltyShare" name="royaltyShare" class="input-medium"  ng-model="gd.royaltyShare" required ></td>
 					  </select></td>
                       <td><select ng-model="gd.royaltySequence"  class="input-medium" ng-options="rs.id as rs.value for rs in royaltySequenceDatas" value="{{rs.id}}" required >
 					  </select></td>
