--- a/app/views/organization/viewbusinessline.html
+++ b/app/views/organization/viewbusinessline.html
@@ -9,13 +9,13 @@
 		 <div class="pull-right">
 	      <div class="btn-group">
 	          <a href="#/editbusinessline/{{event.id}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>	        
-	          <!-- <a ng-click="deleteEvent()" class="btn btn-primary"><i class="icon-trash icon-white"></i> Delete</a>	 --> 
+	          <a ng-click="deleteEvent()" class="btn btn-primary"><i class="icon-trash icon-white"></i> Delete</a>
 	      </div>
 	    </div>
 	</div>
 
 	<div class="row paddedleft">
-		<h3>{{'label.viewevent' | translate}}</h3>
+		<h3>View Business Line</h3>
 		<table width="100%">
 		    <tr>
                 <td>{{'label.event.id' | translate}}</td>
