--- a/app/views/clients/addrevenueshare.html
+++ b/app/views/clients/addrevenueshare.html
@@ -99,7 +99,7 @@
           <tr class="control-group">
                 <td>
                     <form>
-                      <button type="button" ng-click="addPercentage()" class="btn btn-primary"><i class="icon-plus icon-white"></i></button>
+                      <button type="button" ng-click="addPercentage()" id="percentageParamsDataArray" class="btn btn-primary"><i class="icon-plus icon-white"></i></button>
                     </form>
                 </td>
               </tr>
