--- a/app/views/organization/editbusinessline.html
+++ b/app/views/organization/editbusinessline.html
@@ -1,9 +1,8 @@
 <div ng-controller="EditBusinessLineController">
 <div>
 		<ul class="breadcrumb">
-			<li><a href="#/businessline">{{'label.businessline' | translate}}</a> <span
-				class="divider">/</span></li>
-			
+			<li><a href="#/businessline">{{'label.businessline' | translate}}</a> <span class="divider">/</span></li>
+			<li><a href="#/viewbusinessline/{{id}}">{{'lable.viewbusinessline' | translate}}</a> <span class="divider">/</span></li>
 			<li class="active">{{'label.editbusinessline' | translate}}</li>
 		</ul>
 	</div>
@@ -93,7 +92,7 @@
 		</table>
 		
 		<div class="offset3">
-			<a href="#/businessline"><button id="cancel" type="reset" class="btn">Cancel</button></a>
+			<a href="#/viewbusinessline/{{id}}"><button id="cancel" type="reset" class="btn">Cancel</button></a>
 			<button  id="submit" type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
